Use fortigate.pl plugins

--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -1,5 +1,35 @@
 define host{
+   name           generic-fortinet
+   use            generic-host
+   check_command  check_ping
+   register       0
+
+   _FORTINET_CPU_WARN 80 
+   _FORTINET_CPU_CRIT 90 
+
+   _FORTINET_MEM_WARN 80 
+   _FORTINET_MEM_CRIT 90 
+
+   _FORTINET_SES_WARN 20000
+   _FORTINET_SES_CRIT 25000 
+
+   _SNMPCOMMUNITY		$SNMPCOMMUNITYREAD$
+}
+
+define host{
+   name           fortinet-slave
+   use            generic-fortinet
+   register       0
+}
+
+define host{
    name           fortinet
-   use            switch
+   use            generic-fortinet
+   register       0
+}
+
+define service{
+   name           fortinet-service
+   use            generic-service
    register       0
 }
