Fix double declaration of "-w" and "-c" options

--- a/pack/commands.cfg
+++ b/pack/commands.cfg
@@ -40,12 +40,12 @@ define command {
 # Session
 define command {
   command_name  check_fortigate_ses
-  command_line  $PLUGINSDIR$/check_fortigate.pl -H $HOSTADDRESS$ -C $_HOSTSNMPCOMMUNITY$ -T ses -w 250 -c 350  -w $_HOSTFORTINET_SES_WARN$ -c $_HOSTFORTINET_SES_CRIT$
+  command_line  $PLUGINSDIR$/check_fortigate.pl -H $HOSTADDRESS$ -C $_HOSTSNMPCOMMUNITY$ -T ses -w $_HOSTFORTINET_SES_WARN$ -c $_HOSTFORTINET_SES_CRIT$
 }
 
 define command {
   command_name  check_fortigate_slave_ses
-  command_line  $PLUGINSDIR$/check_fortigate.pl -H $HOSTADDRESS$ -C $_HOSTSNMPCOMMUNITY$ -T ses -s -w 250 -c 350 -w $_HOSTFORTINET_SES_WARN$ -c $_HOSTFORTINET_SES_CRIT$
+  command_line  $PLUGINSDIR$/check_fortigate.pl -H $HOSTADDRESS$ -C $_HOSTSNMPCOMMUNITY$ -T ses -s -w $_HOSTFORTINET_SES_WARN$ -c $_HOSTFORTINET_SES_CRIT$
 }
 
 define command {
